--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="myheader">
-      <img src="src/image-252.svg" width="84" height="100"></img>
+      <img src="src/image-252.svg" class="" width="84" height="100"></img>
       <p>Boston and New York Bear Brunt</p>
       <img src="src/Universal.svg" width="184" height="40"></img>
       <p>Monday, January 1, 2018</p>
