--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML + CSS</title>
+    <title>Figma</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="myheader">
-      <img src="src/image-252.svg" class="" width="84" height="100"></img>
-      <p>Boston and New York Bear Brunt</p>
-      <img src="src/Universal.svg" width="184" height="40"></img>
-      <p>Monday, January 1, 2018</p>
-      <img src="src/Sun.svg" width="20" height="20"></img>
-      <p>- 23 °C</p>
+      <img src="src/image-252.svg" class="free" width="84" height="100"></img>
+      <p class="NY">Boston and New York Bear Brunt</p>
+      <img src="src/Universal.svg" class="Boston"width="184" height="40"></img>
+      <p class="date">Monday, January 1, 2018</p>
+      <img src="src/Sun.svg" class="sun" width="20" height="20"></img>
+      <p class="temp">- 23 °C</p>
       </header>
   </body>
 </html>
