--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
       <p class="date">Monday, January 1, 2018</p>
       <img src="src/Sun.svg" class="sun" width="20" height="20"></img>
       <p class="temp">- 23 °C</p>
+      <nav>
+        <ul>
+          <li><a href="#">NEWS</a></li>
+          <li><a href="#">OPINION</a></li>
+          <li><a href="#">SCIENCE</a></li>
+          <li><a href="#">LIFE</a></li>
+          <li><a href="#">TRAVEL</a></li>
+          <li><a href="#">MONEYS</a></li>
+          <li><a href="#">ART & DESIGN</a></li>
+          <li><a href="#">SPORTS</a></li>
+          <li><a href="#">PEOPLE</a></li>
+          <li><a href="#">HEALTH</a></li>
+          <li><a href="#">EDUCATION</a></li>
+       </ul>
+      </nav>
       </header>
   </body>
 </html>
