--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <p class="date">Monday, January 1, 2018</p>
       <img src="src/Sun.svg" class="sun" width="20" height="20"></img>
       <p class="temp">- 23 °C</p>
-      <nav>
+      </header>
+      <nav class="menu">
         <ul>
           <li><a href="#">NEWS</a></li>
           <li><a href="#">OPINION</a></li>
@@ -31,6 +32,5 @@
           <li><a href="#">EDUCATION</a></li>
        </ul>
       </nav>
-      </header>
   </body>
 </html>
