--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <header class="myheader">
-      <img src="src/image-252.svg" class="free" width="100" height="84"></img>
+      <img src="src/image-252.svg" class="free" ></img>
       <p class="NY">Boston and New York Bear Brunt</p>
-      <img src="src/Universal.svg" class="Boston" width="184" height="40"></img>
+      <img src="src/Universal.svg" class="Boston"></img>
       <p class="date">Monday, January 1, 2018</p>
-      <img src="src/Sun.svg" class="sun" width="20" height="20"></img>
+      <img src="src/Sun.svg" class="sun"></img>
       <p class="temp">- 23 °C</p>
       </header>
       <nav class="menu">
