--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
           <li><a href="#">EDUCATION</a></li>
        </ul>
       </nav>
+      <div class="medium">
+        
+      </div>
   </body>
 </html>
