--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
        </ul>
       </nav>
       <div class="medium">
-        
+        <ul class="songs">
+          <li>25 Songs That Tell Us Where Music Is Going</li>
+          <li>These Ancient Assassins Eat Their Own Kind</li>
+          <li>How Do You Teach People to Love Difficult Music?</li>
+          <li>International Soccer’s Man of Mystery</li>
+        </ul>
       </div>
   </body>
 </html>
