--- a/index.html
+++ b/index.html
@@ -35,10 +35,18 @@
       </nav>
       <div class="medium">
         <ul>
-          <li>25 Songs That Tell Us Where Music Is Going</li>
-          <li>These Ancient Assassins Eat Their Own Kind</li>
-          <li>How Do You Teach People to Love Difficult Music?</li>
-          <li>International Soccer's Man of Mystery</li>
+          <li>25 Songs That Tell Us Where Music Is Going
+            <img src="src/gitar.png">
+          </li>
+          <li>These Ancient Assassins Eat Their Own Kind
+            <img src="src/baterfly.png">
+          </li>
+          <li>How Do You Teach People to Love Difficult Music?
+            <img src="src/negr.png"
+          </li>
+          <li>International Soccer's Man of Mystery
+            <img src="src/road.png"
+          </li>
         </ul>
       </div>
   </body>
