--- a/index.html
+++ b/index.html
@@ -49,5 +49,44 @@
           </li>
         </ul>
       </div>
+      <table>
+        <thead>
+            <tr>
+                <th rowspan="6"></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Recommended for you</td>
+            </tr>
+            <tr>
+                <td>Food
+                  For Chicken-Fried Steak, Too Much Is Just Enough</td>
+            </tr>
+            <tr>
+                <td>Cars
+                  Storm Has Car Dealers Doing Swift Business
+                </td>
+            </tr>
+            <tr>
+                <td>Movies
+                  War Is Hell? In New Military Dramas, It’s One-Dimensional
+                </td>
+            </tr>
+            <tr>
+                <td>
+                  NFL
+                  11 surprising stat rankings for active NFL players
+                </td>
+            </tr>
+            <tr>
+                <td>Tech Reviews
+                  The bookcases you can buy online and assemble yourself
+                  </td>
+            </tr>
+        </tbody>
+    </table>
+      </table>
   </body>
 </html>
