--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <table>
         <thead>
             <tr>
-                <th rowspan="6"></th>
+                <th rowspan="6"><img src="src/mount.png"></th>
                 <th></th>
             </tr>
         </thead>
