--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </li>
         </ul>
       </div>
-      <table>
+      <table class="firsttable">
         <thead>
             <tr>
                 <th style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png"></th>
