--- a/index.html
+++ b/index.html
@@ -53,13 +53,10 @@
         <thead>
             <tr>
                 <th style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></th>
-                <th></th>
+                <th>Recommended for you</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Recommended for you</td>
-            </tr>
             <tr>
                 <td>Food
                   For Chicken-Fried Steak, Too Much Is Just Enough</td>
