--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <thead>
             <tr>
                 <th style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></th>
-                <th>Recommended for you</th>
+                <th style="width: 263px;">Recommended for you</th>
             </tr>
         </thead>
         <tbody>
