--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@
         </ul>
       </div>
       <table class="firsttable">
-        <thead>
             <tr>
-                <th style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></th>
-                <th style="width: 263px;">Recommended for you</th>
+                <td style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></td>
+                <td style="width: 263px;">Recommended for you</td>
             </tr>
-        </thead>
-        <tbody>
             <tr>
                 <td>Food
                   For Chicken-Fried Steak, Too Much Is Just Enough</td>
@@ -82,8 +79,6 @@
                   The bookcases you can buy online and assemble yourself
                   </td>
             </tr>
-        </tbody>
     </table>
-      </table>
   </body>
 </html>
