--- a/index.html
+++ b/index.html
@@ -52,30 +52,32 @@
       <table class="firsttable">
             <tr>
                 <td style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></td>
-                <td style="width: 263px;">Recommended for you</td>
+                <td style="width: 263px;" class="1">Recommended for you</td>
             </tr>
             <tr>
-                <td>Food
-                  For Chicken-Fried Steak, Too Much Is Just Enough</td>
+                <td class="2">Food
+                  For Chicken-Fried Steak, Too Much Is Just Enough
+                <img src="src/Play.png"></td>
             </tr>
             <tr>
-                <td>Cars
+                <td class="3">Cars
                   Storm Has Car Dealers Doing Swift Business
                 </td>
             </tr>
             <tr>
-                <td>Movies
+                <td class="4">Movies
                   War Is Hell? In New Military Dramas, It’s One-Dimensional
                 </td>
             </tr>
             <tr>
-                <td>
+                <td class="5">
                   NFL
                   11 surprising stat rankings for active NFL players
+                  <img src="src/Play.png"></td>
                 </td>
             </tr>
             <tr>
-                <td>Tech Reviews
+                <td class="6">Tech Reviews
                   The bookcases you can buy online and assemble yourself
                   </td>
             </tr>
