--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <tr>
                 <td class="2">Food
                   For Chicken-Fried Steak, Too Much Is Just Enough
-                <img src="src/Play.png" width="20px" height="20px"></td>
+                <img src="src/Play.png" width="20" height="20"></td>
             </tr>
             <tr>
                 <td class="3">Cars
@@ -73,7 +73,7 @@
                 <td class="5">
                   NFL
                   11 surprising stat rankings for active NFL players
-                  <img src="src/Play.png" width="20px" height="20px"></td>
+                  <img src="src/Play.png" width="20" height="20"></td>
                 </td>
             </tr>
             <tr>
