--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
       <table class="firsttable">
             <tr>
                 <td style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></td>
-                <td style="width: 263px;" class="1">Recommended for you</td>
+                <td style="width: 263px;" class="tab11">Recommended for you</td>
             </tr>
             <tr>
-                <td class="2">Food
+                <td class="tab12">Food
                   For Chicken-Fried Steak, Too Much Is Just Enough
                 <img src="src/Play.png" width="20" height="20"></td>
             </tr>
             <tr>
-                <td class="3">Cars
+                <td class="tab13">Cars
                   Storm Has Car Dealers Doing Swift Business
                 </td>
             </tr>
             <tr>
-                <td class="4">Movies
+                <td class="tab14">Movies
                   War Is Hell? In New Military Dramas, It’s One-Dimensional
                 </td>
             </tr>
             <tr>
-                <td class="5">
+                <td class="tab15">
                   NFL
                   11 surprising stat rankings for active NFL players
                   <img src="src/Play.png" width="20" height="20"></td>
                 </td>
             </tr>
             <tr>
-                <td class="6">Tech Reviews
+                <td class="tab16">Tech Reviews
                   The bookcases you can buy online and assemble yourself
                   </td>
             </tr>
