--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <tr>
                 <td class="tab12">Food
                   For Chicken-Fried Steak, Too Much Is Just Enough
-                <img src="src/Play.png" width="20" height="20"></td>
+                <img src="src/Play.png" class="play" ></td>
             </tr>
             <tr>
                 <td class="tab13">Cars
@@ -73,7 +73,7 @@
                 <td class="tab15">
                   NFL
                   11 surprising stat rankings for active NFL players
-                  <img src="src/Play.png" width="20" height="20"></td>
+                  <img src="src/Play.png" class="play"></td>
                 </td>
             </tr>
             <tr>
