--- a/index.html
+++ b/index.html
@@ -55,30 +55,30 @@
                 <td style="width: 263px;" class="tab11">Recommended for you</td>
             </tr>
             <tr>
-                <td class="tab12">Food
-                  For Chicken-Fried Steak, Too Much Is Just Enough
+                <td class="tab12"><p>Food</p>
+                  <p class="tdtext">For Chicken-Fried Steak, Too Much Is Just Enough</p>
                 <img src="src/Play.png" class="play" ></td>
             </tr>
             <tr>
-                <td class="tab13">Cars
-                  Storm Has Car Dealers Doing Swift Business
+                <td class="tab1"><p>Cars</p>
+                  <p class="tdtext">Storm Has Car Dealers Doing Swift Business</p>
                 </td>
             </tr>
             <tr>
-                <td class="tab14">Movies
-                  War Is Hell? In New Military Dramas, It’s One-Dimensional
+                <td class="tab1"><p>Movies</p>
+                <p class="tdtext">War Is Hell? In New Military Dramas, It’s One-Dimensional</p>
                 </td>
             </tr>
             <tr>
-                <td class="tab15">
-                  NFL
-                  11 surprising stat rankings for active NFL players
+                <td class="tab1">
+                  <p>NFL</p>
+                  <p class="tdtext">11 surprising stat rankings for active NFL players</p>
                   <img src="src/Play.png" class="play"></td>
                 </td>
             </tr>
             <tr>
-                <td class="tab16">Tech Reviews
-                  The bookcases you can buy online and assemble yourself
+                <td class="tab16"><p>Tech Reviews</p>
+                  <p class="tdtext">The bookcases you can buy online and assemble yourself</p>
                   </td>
             </tr>
     </table>
