--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <table class="firsttable">
             <tr>
                 <td style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></td>
-                <td style="width: 263px;" class="tab11">Recommended for you</td>
+                <td class="tab11">Recommended for you</td>
             </tr>
             <tr>
                 <td class="tab12"><p>Food</p>
