--- a/index.html
+++ b/index.html
@@ -56,29 +56,29 @@
             </tr>
             <tr>
                 <td class="tab12"><p>Food</p>
-                  <p class="tdtext">For Chicken-Fried Steak, Too Much Is Just Enough</p>
+                  <p>For Chicken-Fried Steak, Too Much Is Just Enough</p>
                 <img src="src/Play.png" class="play" ></td>
             </tr>
             <tr>
                 <td class="tab1"><p>Cars</p>
-                  <p class="tdtext">Storm Has Car Dealers Doing Swift Business</p>
+                  <p>Storm Has Car Dealers Doing Swift Business</p>
                 </td>
             </tr>
             <tr>
                 <td class="tab1"><p>Movies</p>
-                <p class="tdtext">War Is Hell? In New Military Dramas, It’s One-Dimensional</p>
+                <p>War Is Hell? In New Military Dramas, It’s One-Dimensional</p>
                 </td>
             </tr>
             <tr>
                 <td class="tab1">
                   <p>NFL</p>
-                  <p class="tdtext">11 surprising stat rankings for active NFL players</p>
+                  <p>11 surprising stat rankings for active NFL players</p>
                   <img src="src/Play.png" class="play"></td>
                 </td>
             </tr>
             <tr>
                 <td class="tab16"><p>Tech Reviews</p>
-                  <p class="tdtext">The bookcases you can buy online and assemble yourself</p>
+                  <p>The bookcases you can buy online and assemble yourself</p>
                   </td>
             </tr>
     </table>
