--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <td class="tab11">Recommended for you</td>
             </tr>
             <tr>
-                <td class="tab12"><p>Food</p>
+                <td><p>Food</p>
                   <p>For Chicken-Fried Steak, Too Much Is Just Enough</p>
                 <img src="src/Play.png" class="play" ></td>
             </tr>
@@ -65,12 +65,12 @@
                 </td>
             </tr>
             <tr>
-                <td class="tab1"><p>Movies</p>
+                <td><p>Movies</p>
                 <p>War Is Hell? In New Military Dramas, It’s One-Dimensional</p>
                 </td>
             </tr>
             <tr>
-                <td class="tab1">
+                <td>
                   <p>NFL</p>
                   <p>11 surprising stat rankings for active NFL players</p>
                   <img src="src/Play.png" class="play"></td>
