--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </tr>
             <tr>
                 <td><p>Food</p>
-                  <p>For Chicken-Fried Steak, Too Much Is Just Enough</p>
-                <img src="src/Play.png" class="play" ></td>
+                  <p>For Chicken-Fried Steak, Too Much Is Just Enough <img src="src/Play.png" class="play" ></p>
+                </td>
             </tr>
             <tr>
                 <td class="tab1"><p>Cars</p>
@@ -72,8 +72,8 @@
             <tr>
                 <td>
                   <p>NFL</p>
-                  <p>11 surprising stat rankings for active NFL players</p>
-                  <img src="src/Play.png" class="play"></td>
+                  <p>11 surprising stat rankings for active NFL players <img src="src/Play.png" class="play"></p>
+                  </td>
                 </td>
             </tr>
             <tr>
