--- a/index.html
+++ b/index.html
@@ -55,29 +55,29 @@
                 <td class="tab11">Recommended for you</td>
             </tr>
             <tr>
-                <td><p class="food">Food</p>
+                <td><p style="color: #3BBDC4;">Food</p>
                   <p>For Chicken-Fried Steak, Too Much Is Just Enough <img src="src/Play.png" class="play" ></p>
                 </td>
             </tr>
             <tr>
-                <td><p class="cars">Cars</p>
+                <td><p style="color:  #6E99AE;">Cars</p>
                   <p>Storm Has Car Dealers Doing Swift Business</p>
                 </td>
             </tr>
             <tr>
-                <td><p class="movies">Movies</p>
+                <td><p style="color:  #AC8EE3;">Movies</p>
                 <p>War Is Hell? In New Military Dramas, It’s One-Dimensional</p>
                 </td>
             </tr>
             <tr>
                 <td>
-                  <p class="nfl">NFL</p>
+                  <p style="color:  #FFA34D">NFL</p>
                   <p>11 surprising stat rankings for active NFL players <img src="src/Play.png" class="play"></p>
                   </td>
                 </td>
             </tr>
             <tr>
-                <td class="tab16"><p class="tech">Tech Reviews</p>
+                <td style="color: #3DC47E;"><p class="tech">Tech Reviews</p>
                   <p>The bookcases you can buy online and assemble yourself</p>
                   </td>
             </tr>
