--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </td>
             </tr>
             <tr>
-                <td style="color: #3DC47E;"><p class="tech">Tech Reviews</p>
+                <td class="tab16"><p style="color: #3DC47E;">Tech Reviews</p>
                   <p>The bookcases you can buy online and assemble yourself</p>
                   </td>
             </tr>
