--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <table class="firsttable">
             <tr>
                 <td style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></td>
-                <td class="tab11">Recommended for you</td>
+                <td class="tab11"><p class="tbhd" style="color: #5D5FEF;">Recommended for you</p></td>
             </tr>
             <tr>
                 <td><p style="color: #3BBDC4;">Food</p>
