--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             </tr>
             <tr>
                 <td><p style="color: #3BBDC4;">Food</p>
-                  <p>For Chicken-Fried Steak, Too Much Is Just Enough <img src="src/Play.png" class="play" ></p>
+                  <p>For Chicken-Fried Steak, Too Much Is Just Enough</p>
+                  <img src="src/Play.png" class="play" >
                 </td>
             </tr>
             <tr>
@@ -72,7 +73,8 @@
             <tr>
                 <td>
                   <p style="color:  #FFA34D">NFL</p>
-                  <p>11 surprising stat rankings for active NFL players <img src="src/Play.png" class="play"></p>
+                  <p>11 surprising stat rankings for active NFL players</p>
+                  <img src="src/Play.png" class="play">
                   </td>
                 </td>
             </tr>
