--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
       <table class="firsttable">
             <tr>
                 <td style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></td>
-                <td class="tab11"><p class="tbhd" style="color: #5D5FEF; width: 213px; font-weight: bold;">Recommended for you</p></td>
+                <td class="tab11"><p class="tbhd" style="color: #5D5FEF; width: 213px; font-weight: bold;">RECOMMENDED FOR YOU</p></td>
             </tr>
             <tr>
-                <td><p style="color: #3BBDC4;">Food</p>
+                <td><p style="color: #3BBDC4;">FOOD</p>
                   <p>For Chicken-Fried Steak, Too Much Is Just Enough</p>
                   <img src="src/Play.png" class="play" >
                 </td>
             </tr>
             <tr>
-                <td><p style="color:  #6E99AE;">Cars</p>
+                <td><p style="color:  #6E99AE;">CARS</p>
                   <p>Storm Has Car Dealers Doing Swift Business</p>
                 </td>
             </tr>
             <tr>
-                <td><p style="color:  #AC8EE3;">Movies</p>
+                <td><p style="color:  #AC8EE3;">MOVIES</p>
                 <p>War Is Hell? In New Military Dramas, It’s One-Dimensional</p>
                 </td>
             </tr>
@@ -79,7 +79,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="tab16"><p style="color: #3DC47E;">Tech Reviews</p>
+                <td class="tab16"><p style="color: #3DC47E;">TECH REVIEWS</p>
                   <p>The bookcases you can buy online and assemble yourself</p>
                   </td>
             </tr>
