--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             </tr>
             <tr>
                 <td><p style="color: #3BBDC4;">FOOD</p>
-                  <p>For Chicken-Fried Steak, Too     Much Is Just Enough</p>
+                  <p>For Chicken-Fried Steak, Too</p>     
+                  <p>Much Is Just Enough</p>
                   <img src="src/Play.png" class="play" >
                 </td>
             </tr>
