--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
             <tr>
                 <td><p style="color: #3BBDC4;">FOOD</p>
                   <p>For Chicken-Fried Steak, Too</p>     
-                  <p>Much Is Just Enough</p>
-                  <img src="src/Play.png" class="play" >
+                  <p>Much Is Just Enough <img src="src/Play.png" class="play" ></p>
                 </td>
             </tr>
             <tr>
@@ -74,8 +73,7 @@
             <tr>
                 <td>
                   <p style="color:  #FFA34D">NFL</p>
-                  <p>11 surprising stat rankings for active NFL players</p>
-                  <img src="src/Play.png" class="play">
+                  <p>11 surprising stat rankings for active NFL players <img src="src/Play.png" class="play"></p>
                   </td>
                 </td>
             </tr>
