--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             <tr>
                 <td><p style="color: #3BBDC4;">FOOD</p>
                   <p>For Chicken-Fried Steak, Too</p>     
-                  <p>Much Is Just Enough <img src="src/Play.png" class="play" ></p>
+                  <p>Much Is Just Enough</p>
+                  <img src="src/Play.png" class="play" >
                 </td>
             </tr>
             <tr>
@@ -73,7 +74,8 @@
             <tr>
                 <td>
                   <p style="color:  #FFA34D">NFL</p>
-                  <p>11 surprising stat rankings for active NFL players <img src="src/Play.png" class="play"></p>
+                  <p>11 surprising stat rankings for active NFL players</p>
+                  <img src="src/Play.png" class="play">
                   </td>
                 </td>
             </tr>
