--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <tr>
                 <td><p style="color: #3BBDC4;">FOOD</p>
                   <p>For Chicken-Fried Steak, Too</p>     
-                  <p style="display: inline-block;">Much Is Just Enough </p>
+                  <p>Much Is Just Enough </p>
                   <img src="src/Play.png" class="play" >
                 </td>
             </tr>
@@ -74,7 +74,7 @@
             <tr>
                 <td>
                   <p style="color:  #FFA34D">NFL</p>
-                  <p style="display: inline-block;">11 surprising stat rankings for active NFL players</p>
+                  <p>11 surprising stat rankings for active NFL players</p>
                   <img src="src/Play.png" class="play">
                   </td>
                 </td>
