--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       </div>
       <table class="firsttable">
             <tr>
-                <td style="width: 877px; height: 570px;" rowspan="6"><img src="src/mount.png" class="mount"></td>
+                <td style="width: 877px; height: 570px;" rowspan="6">
+                 <img src="src/mount.png" class="mount">
+                </td>
                 <td class="tab11"><p style="color: #5D5FEF;  font-weight: bold;">RECOMMENDED FOR YOU</p></td>
             </tr>
             <tr>
