--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           </li>
         </ul>
       </div>
+      <div class="end">
       <table class="firsttable">
             <tr>
                 <td style="width: 877px; height: 570px;" rowspan="6">
@@ -87,5 +88,6 @@
                   </td>
             </tr>
     </table>
+    </div>
   </body>
 </html>
