--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
           </li>
         </ul>
       </div>
-      <div class="end">
       <table class="firsttable">
             <tr>
                 <td style="width: 877px; height: 570px;" rowspan="6">
@@ -88,6 +87,6 @@
                   </td>
             </tr>
     </table>
-    </div>
+    <div class="end"></div>
   </body>
 </html>
