--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <td style="width: 877px; height: 570px;" rowspan="6">
                  <img src="src/mount.png" class="mount">
                 </td>
-                <td class="tab11"><p style="color: #5D5FEF;  font-weight: bold;">RECOMMENDED FOR YOU</p></td>
+                <td class="tab11" style="padding-top: -285px;"><p style="color: #5D5FEF;  font-weight: bold;">RECOMMENDED FOR YOU</p></td>
             </tr>
             <tr>
                 <td><p style="color: #3BBDC4;">FOOD</p>
