--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   </td>
             </tr>
     </table>
-    <div class="end">
-    </div>
+    <!-- <div class="end">
+    </div> -->
   </body>
 </html>
