--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <td class="tab11"><p style="color: #5D5FEF;  font-weight: bold;">RECOMMENDED FOR YOU</p></td>
           </tr>
           <tr>
-              <td style="color: #F5F5F5;"><p style="color: #3BBDC4;">FOOD</p>
+              <td style="background-color: #F5F5F5;"><p style="color: #3BBDC4;">FOOD</p>
                 <p>For Chicken-Fried Steak, Too</p>     
                 <p>Much Is Just Enough </p>
                 <img src="src/Play.png" class="play" >
