--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <td style="background-color: #F5F5F5;"><p style="color: #3BBDC4;">FOOD</p>
                 <p>For Chicken-Fried Steak, Too</p>     
                 <p>Much Is Just Enough </p>
-                <img src="src/Play.png" class="play" >
+                <!-- <img src="src/Play.png" class="play" > -->
               </td>
           </tr>
           <tr>
@@ -76,7 +76,7 @@
               <td>
                 <p style="color:  #FFA34D">NFL</p>
                 <p>11 surprising stat rankings for active NFL players</p>
-                <img src="src/Play.png" class="play">
+                <!-- <img src="src/Play.png" class="play"> -->
                 </td>
               </td>
           </tr>
