--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
               <td style="width: 877px; height: 570px;" rowspan="6">
                <img src="src/mount.png" class="mount">
               </td>
-              <td class="tab11"><p style="color: #5D5FEF;  font-weight: bold;">RECOMMENDED FOR YOU</p></td>
+              <td class="tab11"><p style="color: #5D5FEF;  font-weight: bold; height: 75px;">RECOMMENDED FOR YOU</p></td>
           </tr>
           <tr>
               <td style="background-color: #F5F5F5;"><p style="color: #3BBDC4;">FOOD</p>
                 <p>For Chicken-Fried Steak, Too</p>     
                 <p>Much Is Just Enough </p>
-                <!-- <img src="src/Play.png" class="play" > -->
+                <img src="src/Play.png" class="play" >
               </td>
           </tr>
           <tr>
@@ -76,7 +76,7 @@
               <td>
                 <p style="color:  #FFA34D">NFL</p>
                 <p>11 surprising stat rankings for active NFL players</p>
-                <!-- <img src="src/Play.png" class="play"> -->
+                <img src="src/Play.png" class="play">
                 </td>
               </td>
           </tr>
