--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ul>
         <table class="firsttable">
           <tr>
-              <td style="width: 877px; height: 570px;" rowspan="6">
+              <td style="width: 877px; height: 570px; border-bottom: none;" rowspan="6">
                <img src="src/mount.png" class="mount">
               </td>
               <td class="tab11" style="height: 75px;"><p style="color: #5D5FEF;  font-weight: bold; ">RECOMMENDED FOR YOU</p></td>
@@ -81,7 +81,7 @@
               </td>
           </tr>
           <tr>
-              <td class="tab16"><p style="color: #3DC47E;">TECH REVIEWS</p>
+              <td class="tab16" style="border-bottom: none;"><p style="color: #3DC47E;">TECH REVIEWS</p>
                 <p>The bookcases you can buy online and assemble yourself</p>
                 </td>
           </tr>
