--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </td>
           </tr>
           <tr>
-              <td class="tab16" style="border-bottom: none;"><p style="color: #3DC47E;">TECH REVIEWS</p>
+              <td style="border-bottom: none;"><p style="color: #3DC47E;">TECH REVIEWS</p>
                 <p>The bookcases you can buy online and assemble yourself</p>
                 </td>
           </tr>
