--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <table class="firsttable">
           <tr>
               <td style="width: 877px; height: 570px; border-bottom: none;" rowspan="6">
-                <div class="monttd"><img src="src/mount.png" class="mount"></div>
+                <div class="monttd"></div>
               </td>
               <td class="tab11" style="height: 75px;"><p style="color: #5D5FEF;  font-weight: bold; ">RECOMMENDED FOR YOU</p></td>
           </tr>
