--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
         <table class="firsttable">
           <tr>
               <td style="width: 877px; height: 570px; border-bottom: none;" rowspan="6">
-                <div class="monttd"></div>
+                <div class="monttd">
+                  <img src="src/Avatar.png" class="Avatar">
+                  <p>By Benjamin Turner</p>
+                  <p>Traveler</p>
+                  <p>Destinations</p>
+                  <p>In Southeast England, White Cliffs and Fish</p>
+                  <button class="readmore">Read more</button>
+                  <img src="src/wPlay.png" class="wPlay">
+                  <p>The chalk cliff of Beachy Head</p>
+                  <p>18:05</p>
+                </div>
               </td>
               <td class="tab11" style="height: 75px;"><p style="color: #5D5FEF;  font-weight: bold; ">RECOMMENDED FOR YOU</p></td>
           </tr>
