--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <img src="src/Avatar.png" class="Avatar">
                   <p>By Benjamin Turner</p>
                   <p>Traveler</p>
-                  <p>Destinations</p>
+                  <a href="#">Destinations</a>
                   <p>In Southeast England, White Cliffs and Fish</p>
                   <button class="readmore">Read more</button>
                   <img src="src/wPlay.png" class="wPlay">
