--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
               <td style="width: 877px; height: 570px; border-bottom: none;" rowspan="6">
                 <div class="monttd">
                   <img src="src/Avatar.png" class="Avatar">
-                  <p style="margin-left: 110px; margin-top: 59px; opacity: 0.85;">By Benjamin Turner</p>
-                  <p style="margin-top: 81px;margin-left: 110px; opacity: 0.4; font-size: 12px; line-height: 15px;">Traveler</p>
-                  <a href="#">Destinations</a>
+                  <p style="left: 110px; top: 59px; opacity: 0.85;">By Benjamin Turner</p>
+                  <p style="top: 81px; left: 110px; opacity: 0.4; font-size: 12px; line-height: 15px;">Traveler</p>
+                  <a href="#">DESTINATIONS</a>
                   <p singlname>In Southeast England, White Cliffs and Fish</p>
                   <button class="readmore">Read more</button>
                   <img src="src/wPlay.png" class="wPlay">
-                  <p style="margin-top: 431px; margin-left: 283px; opacity: 0.85;">The chalk cliff of Beachy Head</p>
-                  <p style="margin-top: 453px; margin-left: 283px; opacity: 0.4;font-size: 12px;line-height: 15px;">18:05</p>
+                  <p style="top: 431px; left: 283px; opacity: 0.85;">The chalk cliff of Beachy Head</p>
+                  <p style="top: 453px; left: 283px; opacity: 0.4;font-size: 12px;line-height: 15px;">18:05</p>
                 </div>
               </td>
               <td class="tab11" style="height: 75px;"><p style="color: #5D5FEF;  font-weight: bold; ">RECOMMENDED FOR YOU</p></td>
