--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <p style="left: 110px; top: 59px; opacity: 0.85;">By Benjamin Turner</p>
                   <p style="top: 81px; left: 110px; opacity: 0.4; font-size: 12px; line-height: 15px;">Traveler</p>
                   <a href="#">DESTINATIONS</a>
-                  <p singlname>In Southeast England, White Cliffs and Fish</p>
+                  <p class="singlname">In Southeast England, White Cliffs and Fish</p>
                   <button class="readmore">Read more</button>
                   <img src="src/wPlay.png" class="wPlay">
                   <p style="top: 431px; left: 283px; opacity: 0.85;">The chalk cliff of Beachy Head</p>
