--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <p style="top: 81px; left: 110px; opacity: 0.4; font-size: 12px; line-height: 15px;">Traveler</p>
                   <a href="#">DESTINATIONS</a>
                   <p class="singlname">In Southeast England, White Cliffs and Fish</p>
-                  <button class="readmore">Read more</button>
+                  <button class="readmore">Read more<img src="src/Arrow.png"></button>
                   <img src="src/wPlay.png" class="wPlay">
                   <p style="top: 431px; left: 283px; opacity: 0.85;">The chalk cliff of Beachy Head</p>
                   <p style="top: 453px; left: 283px; opacity: 0.4;font-size: 12px;line-height: 15px;">18:05</p>
