--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
                 </td>
           </tr>
   </table>
+  <table class="articles">
+    <tr>
+      <td style="width: 555px; height: 370px;" rowspan="2">1</td>
+      <td style="width: 263px; height: 370px;">2</td>
+    </tr>
+    <tr>
+      <td style="width: 263px; height: 370px;" colspan="2">3</td>
+      <td style="width: 263px; height: 170px;">4</td>
+      <td style="width: 263px; height: 170px;">5</td>
+    </tr>
+    <tr>
+      <td style="width: 263px; height: 170px;">6</td>
+      <td style="width: 263px; height: 170px;">7</td>
+    </tr>
+  </table>
       </div>
   </body>
 </html>
