--- a/index.html
+++ b/index.html
@@ -99,17 +99,58 @@
   </table>
   <table class="articles">
     <tr>
-      <td style="width: 555px; height: 370px;" colspan="2">1</td>
-      <td style="width: 263px; height: 370px;">2</td>
+      <td style="width: 555px; height: 370px;" colspan="2">
+        <p>Cars</p>
+        <p>The joy of replicas: A $ 5 million car for $ 50,000</p>
+        <p>The 31-year-old self-taught engineer and former amateur 
+          racer spends his days building artful recreations of one of most iconic sports cars</p>
+        <img src="src/Car.png" class="car"/>
+        <img src="src/girl.png" class="girl"/>
+        <p>Jessica Miller:</p>
+        <p>Even as the ride-hailing service’s future remem…</p>
+        <img src="src/Comment.png" class="comment"/>
+        <p>342</p>
+      </td>
+      <td style="width: 263px; height: 370px;">
+        <button>Popular</button>
+        <p>Art & Design</p>
+        <p>Invisible ink: the weird world of tattoo removal – in pictures</p>
+        <img src="src/girl.png" class="girl"/>
+        <p>By Sarah Jenkins</p>
+        <p>Sept 26</p>
+        <img src="src/Comment.png" class="comment"/>
+        <p>16</p>
+        <img src="src/heart.png" class="heart"/>
+        <p>832</p>
+      </td>
     </tr>
     <tr>
-      <td style="width: 263px; height: 370px;" rowspan="2">3</td>
-      <td style="width: 263px; height: 170px;">4</td>
-      <td style="width: 263px; height: 170px;">5</td>
+      <td style="width: 263px; height: 370px;" rowspan="2">
+        <img src="src/cat.png" class="cat"/>
+        <p>200+ Doomed Cats Saved From Euthanization</p>
+      </td>
+      <td style="width: 263px; height: 170px;">
+        <p>Is Coffee Bad for Bones?</p>
+        <p>Coffee drinkers may excrete more calcium, but it doesn’t appear to weaken bones</p>
+        <p>Oct 15</p>
+      </td>
+      <td style="width: 263px; height: 170px;">
+        <p>What We Manufacture</p>
+        <p>A global history of the factory and the modern world that all should read</p>
+        <p>Oct 14</p>
+      </td>
     </tr>
     <tr>
-      <td style="width: 263px; height: 170px;">6</td>
-      <td style="width: 263px; height: 170px;">7</td>
+      <td style="width: 263px; height: 170px;">
+        <p>It’s a Stressful World</p>
+        <p>Can a cruise skeptic enjoy four days on the seas with his family and a bunch of princesses?</p>
+        <p>Oct 14</p>
+      </td>
+      <td style="width: 263px; height: 170px;">
+        <p>A Treat for Lemon Lovers</p>
+        <p>This tangerine, ginger and chocolate tart has verve, depth and a hint of spice</p>
+        <p>Oct 13</p>
+      </td>
     </tr>
   </table>
       </div>
