--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p>Sept 26</p>
         <img src="src/Comment.png" class="comment"/>
         <p>16</p>
-        <img src="src/heart.png" class="heart"/>
+        <img src="src/Heart.png" class="heart"/>
         <p>832</p>
       </td>
     </tr>
