--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <td class="tab11" style="height: 75px;"><p style="color: #5D5FEF;  font-weight: bold; ">RECOMMENDED FOR YOU</p></td>
           </tr>
           <tr>
-              <td style="background-color: #F5F5F5;"><p style="color: #3BBDC4;">FOOD</p>
+              <td style="position:relative; background-color: #F5F5F5;"><p style="color: #3BBDC4;">FOOD</p>
                 <p>For Chicken-Fried Steak, Too</p>     
                 <p>Much Is Just Enough </p>
                 <img src="src/Play.png" class="play" >
